--- a/public/css/custom_admin.css
+++ b/public/css/custom_admin.css
@@ -188,3 +188,13 @@ body{
 .icon_add:hover{
   color: #f72585;
 }
+
+/* modal */
+.modal_body{
+  width: 80%;
+  height: 40px;
+  margin-left: 10%;
+  border-radius: 5px;
+  margin-bottom: 25px;
+  text-align: center;
+}
