--- a/public/css/custom_form.css
+++ b/public/css/custom_form.css
@@ -10,6 +10,14 @@
 .jdl{
     text-align: center;
 }
+.back_home2{
+    z-index: -1;
+    top: 0px;
+    position: absolute;
+    width: 100%;
+    background-size: cover;
+    min-height: 1500px;
+}
 .btn_input{
     width: 85px;
     height: 40px;
@@ -18,7 +26,8 @@
     border: none;
     background-color: #00B3CA;
     color: #fff;
-    margin-left: 85.6%;
+    margin-left: 70%;
+    margin-bottom: 40px;
     margin-top: 20px;
 }
 .btn_input:hover{
@@ -29,8 +38,15 @@
 /* table */
 .tab{
     margin-top: 100px;
-    width: 80%;
-    margin-left: 10%;
+    width: 50%;
+    margin-left: 25%;
+}
+
+.tab td{
+    background-color: #f5f5f5;
+}
+.tab td:hover{
+    background-color: #e6e8e6;
 }
   
   th, td {
